Optimize vertex writer and uniform writer, optimize uniform data deduplication